--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "doctrine/dbal": "^2.9",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "laravel/telescope": "^2.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpmd/phpmd": "^2.6",
