--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel/telescope": "^2.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
+        "nunomaduro/phpinsights": "^1.3",
         "phpmd/phpmd": "^2.6",
         "phpunit/phpunit": "^7.5",
         "squizlabs/php_codesniffer": "^3.4"
