--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "spatie/laravel-event-projector": "^2.0.0",
-        "ext-json": "*"
+        "myclabs/php-enum": "^1.7",
+        "spatie/laravel-event-projector": "^2.0.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
