--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "myclabs/php-enum": "^1.7",
+        "shiftonelabs/laravel-sqs-fifo-queue": "^1.1",
         "spatie/laravel-event-projector": "^2.0.0"
     },
     "require-dev": {
