--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
         "laravel"
     ],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "git",
+            "url":  "git@mygithub.com:guitarbien/laravel-event-projector.git"
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "ext-json": "*",
@@ -16,14 +22,8 @@
         "laravel/tinker": "^1.0",
         "myclabs/php-enum": "^1.7",
         "shiftonelabs/laravel-sqs-fifo-queue": "^1.1",
-        "spatie/laravel-event-projector": "^2.0.0"
+        "spatie/laravel-event-projector": "dev-endingTo_concurrency as 2.6.x-dev"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url":  "git@mygithub.com:guitarbien/laravel-event-projector.git"
-        }
-    ],
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
         "behat/behat": "^3.5",
