--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,6 @@
         "laravel"
     ],
     "license": "MIT",
-    "repositories": [
-        {
-            "type": "git",
-            "url":  "git@mygithub.com:guitarbien/laravel-event-projector.git"
-        }
-    ],
     "require": {
         "php": "^7.1.3",
         "ext-json": "*",
@@ -22,7 +16,7 @@
         "laravel/tinker": "^1.0",
         "myclabs/php-enum": "^1.7",
         "shiftonelabs/laravel-sqs-fifo-queue": "^1.1",
-        "spatie/laravel-event-projector": "dev-endingTo_concurrency as 2.6.x-dev"
+        "spatie/laravel-event-projector": "^2.6.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
